// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseSummary with expense 1`] = `
<div>
  <p>
    Viewing 3 expenses totaling $1,141.95
  </p>
</div>
`;

exports[`should render ExpenseSummary with no expense 1`] = `
<div>
  <p>
    Viewing 0 expenses totaling $0.00
  </p>
</div>
`;
